--- a/Thesis/4-Conclusion.tex
+++ b/Thesis/4-Conclusion.tex
@@ -1,1 +1,10 @@
 \section{Conclusions and outlook}
+
+model building obstruction
+
+for especific def, vol def param psi is not easy to calculate, region proxy
+
+
+
+check same study for other deformations
+study type singularities 
