--- a/Thesis/title.tex
+++ b/Thesis/title.tex
@@ -5,6 +5,9 @@
 \centering 
 \includegraphics[width=0.3\linewidth]{escudo.PNG}
 
+{}
+\vspace{1cm}
+
 {\Huge A walk through moduli space with SLags}
 \vspace{2cm}
 
