--- a/Thesis/3-Project.tex
+++ b/Thesis/3-Project.tex
@@ -4,86 +4,302 @@
 
 \todoin{Why the quintic?}
 
-\todoin{Why study sLags?}
+\todoin{Why study SLags?}
 
-\section{sLags on Fermat's quintic}
+\section{SLags on Fermat's quintic}
+In this section, we describe Fermat's quintic and study the properties of SLag three-cycles 
+defined on this manifold.
 
-\subsection{Definition}
+\subsection{Fermat's quintic}
+Chow's theorem asserts  that any $(n-r)$-dimensional submanifold of $\mathbb{CP}^n$ can be realized as the zero locus of $r$-homogeneous polynomial equations.
+This suggests Calabi-Yau manifolds as submanifolds of a complex projective space
+\todoin{Motivate better}
 
-\subsection{Construction of sLags}
+The complex projective space $\mathbb{CP}^n$ is defined considering the complex space minus the origin $\mathbb{C}^{n+1}\backslash\qty{0}$
+and establishing the equivalence relation $( z_0,\ldots, z_{n})\sim(\lambda z_0,\ldots,\lambda z_{n})$, $\lambda\in\mathbb C$.
+To emphasize that $z_i$ are homogeneous coordinates, they are sometimes denoted as $\qty[z_0:\ldots:z_{n}]$.
+The local (non-homogeneous) coordinates $\xi^i$ of a $j$-patch where $z_j\neq0$ are obtained by choosing $\lambda=1/z_j$ so
+\begin{equation}
+  (\xi^1_j,\ldots,\xi^n_j)=(\frac{z_0}{z_j},\ldots,\frac{z_{j-1}}{z_j},\frac{z_{j+1}}{z_j},\ldots,\frac{z_{n}}{z_j}).
+\end{equation}
+It can be shown that $\mathbb{CP}^n$ is a Kähler manifold.
+$PGL$
+\todoin{Projective group see how it acts, coordinates}
 
-\subsection{Moduli space of sLags}
+The complex projective space allows us to obtain lower dimensional manifolds as subspaces of $\mathbb{CP}^n$.
+Indeed, Chow's theorem states that any submanifold of complex dimension $n-r$ of $\mathbb{CP}^n$ can be realized as the zero locus of $r$-homogeneous polynomial equations.
+An homogeneous polynomial $P$ of degree $d$ satisfies
+\begin{equation}
+  P(\lambda z_1,\ldots,\lambda z_n)=\lambda^d P(z_1,\ldots,z_n).
+\end{equation}
+We are interested in calculating the number of inequivalent $(n-1)$-dimensional submanifolds of $\mathbb{CP}^n$ that can be defined
+through a polynomial equation of degree $d$.
+The number of independent monomials of degree $d$ in $n+1$ variables is given by the binomial coefficient
+\begin{equation}
+  \# \text{ indep. monomials}={{d+(n+1)-1}\choose{(n+1)-1}}
+\end{equation}
+But not all of these lead to different manifolds, since some of them can be related through coordinate transformations, 
+which belong to complex general linear group $GL(\mathbb C)_{n+1}$.
+Thus, the number of the number of possible submanifolds is given by
+\begin{equation}
+  \# \text{ submanifolds } \mathbb{CP}^n = \# \text{ indep. monomials}-\# \text{ components }GL(\mathbb C)_{n+1}
+\end{equation}
+Among of the ${{9}\choose{4}}-5^5=101$ possible submanifolds of $\mathbb{CP}^4$ defined by a quintic polynomial, lies
+Fermat's quintic threefold defined by the polynomial $P_5$ as
+%Two relevant submanifolds are Fermat's quartic twofold in $\mathbb{CP}^3$ and Fermat's
+\begin{equation}
+  %P_4(z)& = z_0^5+z_1^5+z_2^5+z_3^5=0\\
+  P_5(z)& = z_0^5+z_1^5+z_2^5+z_3^5+z_4^5=0.
+\end{equation}
+
+\subsection{Construction of SLags}
+A special-Lagrangian three-cycle is constructed introducing an anti-holomorphic involution.
+In the case of $\mathbb{CP}^4$, there is only one consistent anti-holomorphic,
+that acts on the homogeneous coordinates as $\mathcal R: z_i \to\bar z_i$.
+SLags three-cycles are then defined as the fixed loci under $\mathcal R$, which in the case of
+Fermat's quintic leads to the following SLag
+\begin{equation}
+  \qty{\qty[x_0:x_1:x_2:x_3:x_4]\in  \mathbb{RP}^4| x_0^5+x_1^5+x_2^5+x_3^5+x_4^5=0}
+\end{equation}
+This subspace is topologically equivalent to $\mathbb{RP}^3$, which can be noticed through the
+homeomorphism from $\mathbb{RP}^3$ to the SLag:
+\begin{equation}
+(u_0,u_1,u_3) \to (u_0,u_1,u_2,u_3, -(u_0^5+u_1^5+u_2^5+u_3^5)^{1/5}
+\end{equation}
+
+Show that the obtained subspace is special-Lagrangian
+$\mathcal R: k \to -k$
+calibrated with respect $\Omega_3$.
+The three-form in a local coordinate patch where $z_0\neq0$ is
+\begin{equation}
+  \Omega_3=\frac{4}{2\pi i}\int \frac{x_0 dx_1\wedge dx_2 \wedge dx_3 \wedge dx_4}{P_5(x_i)}
+\end{equation}
+if we interpret $x_4$ as a function of $P_5$ and integrate over a loop around $P_5=0$
+\begin{equation}
+  \Omega_3=\frac{x_0 dx_1\wedge dx_2 \wedge dx_3}{x_4^4}
+  =\frac{dy_1\wedge dy_2\wedge dy_3}{y_4^4}
+\end{equation}
+where we have defined the local coordinates $y_i=x_i/x_0$.
+By taking the norm of the previous equation, we relate $\Omega_3$ to the determinant of the 
+six-dimensional metric
+\begin{equation}
+  ||\Omega_3||^2 = \frac{1}{\det g |y_4|^8}
+\end{equation}
+Since $\Omega_3$ is covariantly constant, $||\Omega_3||$ must also be proportional to a constant defined as
+\begin{equation}
+  ||\Omega_3||^2 = 8e^{2\kappa}
+\end{equation}
+\begin{equation}
+  \det g = \frac{e^{-2\kappa}}{8|y_4|^8}
+\end{equation}
+The pull-back of the six-dimensional metric onto the three-cycle is
+\begin{equation}
+  h_{\alpha\beta}=2\partial_\alpha X^i \partial_\beta X^{\bar j}g_{i\bar j}
+\end{equation}
+\begin{equation}
+  e^k \sqrt{\det h_{ab}}d\sigma^1\wedge d\sigma^2\wedge d\sigma^3
+  =e^k |\det \partial y| \frac{e^{-\kappa}}{|y_4|^4}d\sigma^1\wedge d\sigma^2\wedge d\sigma^3=\Omega_3
+\end{equation}
+
+It is possible to define different SLags by exploiting the $\mathbb Z_5^4$ symmetry of the quintic,
+which are rotations  
+\begin{equation}
+  \ket{0,k_1,k_2,k_3,k_4} = {\qty[x_0:\omega^k_1 x_1:\omega^k_2 x_2:\omega^k_3 x_3:\omega^k_4 x_4]}
+\end{equation}
+where $\omega=e^{i\frac{2\pi}{5}}$
+calibrated O6-plane $\ket{0,0,0,0,0}$.
+The choice of $k_i$ leads to $5^4=625$ SLag three-cycles, but not all of them are calibrated
+\todo{This now!}
+
+\subsection{Moduli space of SLags}
+\todoin{Hard}
 
 \subsection{Intersection numbers}
+spectrum of intersecting D6-branes
 
 \subsection{Volumes}
+\begin{equation}
+  \Omega_3=\frac{dy_1\wedge dy_2\wedge dy_3}{5y_4^4}
+\end{equation}
+
+
+\begin{equation}
+  \int \frac{dy_1\wedge dy_2\wedge dy_3}{5(1+y_1^4+y_2^4+y_3^4)^{4/5}}
+\end{equation}
 
 \subsection{SM on the quintic}
 
-\section{sLags on the deformed quintic}
+\section{SLags on the deformed quintic}
 
-\subsection{Deformations of the quintic. Classification.}
-The consider the possible deformations of Fermat's quintic.
-There should be $101$ independent deformations, since they correspond to different complex 
-structures and are given be the Hodge number $h_{21}=101$.
+\subsection{Deformations of the quintic}
 
-We can add terms of the following type to the quintic
-
+A generalization of Fermat's quintic consists in considering hypersurfaces defined by a generic polynomial of degree five
 \begin{equation}
-  x_i^5, x_i^4 x_j^1, x_i^3 x_j^2, x_i^3 x_j x_k, x_i^2 x_j x_k x_l, x_1 x_2 x_3 x_4 x_5
+  P_5(z)=\sum_{n_0+n_1+n_2+n_3+n_4=5} a_{n_0 n_1 n_2 n_3 n_4} z_0^{n_0}z_1^{n_1}z_2^{n_2}z_3^{n_3}z_4^{n_4}=0
 \end{equation}
-
-Not all of these terms are independent, since a coordinate redefinition $GL(5,\mathbb C)$.
-
-\todoin{Deformation classification}
-
-\todoin{Coordinate redefinition freedom}
-
-
-As an example, we take as deformation $-5\phi z_1 z_2 z_3 z_4 z_5$
-
-
-\todoin{Change of variables to study geometry of the singularity}
-
-
-In order to determine the geometry near the singularity, we make the following change of 
-variables
+This construction reduces to Fermat's quintic when $a_{50000}=a_{50000}=a_{50000}=a_{50000}=a_{50000}=1$ and all other coefficients are zero.
+A well-know example is
 \begin{equation}
-  \begin{aligned}
-  x_1 &= 1 + y_1/\sqrt{10} + y_2/5 + y_4/\sqrt{50}\\
-  x_2 &= 1 + y_1/\sqrt{10} - y_2/5 + y_4/\sqrt{50}\\
-  x_3 &= 1 + y_1/\sqrt{10} + y_3/5 - y_4/\sqrt{50}\\
-  x_4 &= 1 + y_1/\sqrt{10} - y_3/5 - y_4/\sqrt{50}
-  \end{aligned}
+  z_0^5+z_1^5+z_2^5+z_3^5+z_4^5- 5\psi z_0z_1z_2z_3z_4=0
 \end{equation}
+ where the parameter $\psi$ can take three values of particular relevance
+\begin{itemize}
+  \item $\psi=1$: the Fermat (or Gepner point).
+  \item $\psi=0$: the conifold point.
+  \item $\psi=\infty$: the large complex structure limit.
+\end{itemize}
 
-In these coordinates, the quintic becomes
+We can deform Fermat's quintic by adding a monomial to the defining polynomial.
+The possible monomials are of the type:
+\begin{enumerate}
+  \item $z_0z_1z_2z_3z_4$, $1$ deformation.
+  \item $z_i z_j z_k(z_l)^2$, ${5}\choose{3}$${2}\choose{1}$$=20$ deformations. 
+  \item $z_i(z_j)^k(z_l)^2$, ${5}\choose{1}$${4}\choose{2}$$=30$ deformations.
+  \item $z_i z_j(z_k)^3$, ${5}\choose{2}$${3}\choose{1}$$=30$ deformations.
+  \item $(z_i)^2(z_j)^3$, ${5}\choose{1}$${4}\choose{1}$$=20$ deformations.
+  \item $z_i(z_j)^4$, ${5}\choose{3}$${2}\choose{1}$$=20$ deformations.
+\end{enumerate}
+In total there are $126$ deformations, but they are not all independent, since they 
+can be related through coordinate transformations.
+Subtracting  $25$ we $101$ deformation parameters.
+This is precisely the Hodge number $h_{2,1}=101$, since the defining homogeneous polynomial  
+represents a particular choice of the complex structure, which is given by 
+harmonic $(2,1)$-form in $H^{2,1}(X,\mathbb C)$.
+The deformations of Kähler structure is given by the $h^{1,1}$ and is precisely one.
 
+Fermat's quintic enjoys the $\mathbb Z_5^4$ symmetry acting on the homogeneous coordinates 
 \begin{equation}
-  5(\psi -1 ) =  y_1^2 + y_2^2 + y_3^2 + y_4^2 + O( \psi -1 )
+  z_i \to \omega^k_i z_i, \qquad \omega_i=e^{i\frac{2\pi}{5}}
 \end{equation}
-
-
-\todoin{Something about the branch}
-
-
-\todoin{Volume of cycles wrapping singularities}
-\todoin{Three-form integration}
-
-
+which can be broken into a smaller subgroup when turning on deformations.
+We should also examine whether deformations introduce any singularities, which
+are defined as the points 
 \begin{equation}
-  \Omega = \frac{x_5 dx_1 \wedge dx_2\wedge dx_3}{\pdv{p}{x_4}}
+  P_5(X)=0, \qquad dP_5=0
 \end{equation}
+The nature of the singularity is obtained by evaluating the Hessian at the singularity.
+That is calculating $d^2 P_5$ in a local coordinate patch, where one of the homogeneous coordinate is non-zero.
+\todoin{Complete}
+
+We proceed to examine the singularities and associated symmetry subgroups of the deformations.
+\begin{enumerate}
+  \item No deformations.
+
+    $z_0^5+z_1^5+z_2^5+z_3^5+z_4^5=0$ The only point where $dP_5=0$ is  $(0,0,0,0,0)$, which 
+    is not part of $\mathbb{CP}^4$, so 
+
+  \item $5\psi z_0z_1z_2z_3z_4$
+
+    $z_0^5+z_1^5+z_2^5+z_3^5+z_4^5- 5\psi z_0z_1z_2z_3z_4=0$
+
+    The singularities are located at:
+    \begin{equation}
+      z_i^5=\psi x_0x_1x_2x_3x_4
+    \end{equation}
+    \begin{equation}
+      \Pi z_i^5=\psi^5 ( x_0x_1x_2x_3x_4 )^5
+    \end{equation}
+    so in order to obtain a singular point, $\psi^5=1$.
+    Taking $\psi=1$, there a single singular point $(1,1,1,1,1)$ which is a node, since the Hessian doesn't vanish.
+    Locally, the node can be recast into a conifold singularity.
+
+  \item $5\psi z_0z_1z_2(z_3)^2$
+
+    $z_0^5+z_1^5+z_2^5+z_3^5+z_4^5- 5\psi z_0z_1z_2(z_3)^2=0$
+
+    Singularities in the coordinate patch where $z_3=1$
+    \begin{equation}
+      (\frac{1}{\sqrt[5]{2}}, \frac{1}{\sqrt[5]{2}}, \frac{1}{\sqrt[5]{2}}, 1,0) 
+    \end{equation}
+    $\psi=\frac{1}{\sqrt[5]{2}}$
+
+  \item $5\psi z_0(z_1)^2(z_2)^2$
+
+    $z_0^5+z_1^5+z_2^5+z_3^5+z_4^5- 5\psi z_0z_1z_2(z_3)^2=0$
+
+    \begin{equation}
+      (1, \sqrt[5]{2}, \sqrt[5]{2}, 0, 0)
+    \end{equation}
+    $\psi=\frac{1}{\sqrt[5]{2^4}}$
+
+  \item $5\psi z_0z_1(z_2)^3$
+
+    \begin{equation}
+      (\sqrt[5]{3}, \sqrt[5]{3},1, 0, 0)
+    \end{equation}
+    $\psi=\frac{1}{\sqrt[5]{3^3}}$
+
+  \item $5\psi (z_0)^2(z_1)^3$
+
+    \begin{equation}
+      (1, \sqrt[5]{\frac{3}{2}}, 0, 0, 0)
+    \end{equation}
+    $\psi=\frac{1}{\sqrt[5]{3^3}}$
+
+  \item $5\psi z_0(z_1)^4$
+
+    \begin{equation}
+      (1, \sqrt[5]{4}, 0, 0, 0)
+    \end{equation}
+    $\psi=\frac{1}{\sqrt[5]{4^4}}$
+
+    \todoin{Check values, add words}
+\end{enumerate}
+
+\subsection{SLags on the deformed quintic}
+\todoin{Generalities. Special case. Generalization}
 
 
-\begin{equation}
-  \int_{A^2} \Omega = \int  \dots
-\end{equation}
-
-
-
-
-
-
-
-
+%The consider the possible deformations of Fermat's quintic.
+%There should be $101$ independent deformations, since they correspond to different complex 
+%structures and are given be the Hodge number $h_{21}=101$.
+%
+%We can add terms of the following type to the quintic
+%
+%\begin{equation}
+%  x_i^5, x_i^4 x_j^1, x_i^3 x_j^2, x_i^3 x_j x_k, x_i^2 x_j x_k x_l, x_1 x_2 x_3 x_4 x_5
+%\end{equation}
+%
+%Not all of these terms are independent, since a coordinate redefinition $GL(5,\mathbb C)$.
+%
+%\todoin{Deformation classification}
+%
+%\todoin{Coordinate redefinition freedom}
+%
+%As an example, we take as deformation $-5\phi z_1 z_2 z_3 z_4 z_5$
+%
+%\todoin{Change of variables to study geometry of the singularity}
+%
+%In order to determine the geometry near the singularity, we make the following change of 
+%variables
+%\begin{equation}
+%  \begin{aligned}
+%  x_1 &= 1 + y_1/\sqrt{10} + y_2/5 + y_4/\sqrt{50}\\
+%  x_2 &= 1 + y_1/\sqrt{10} - y_2/5 + y_4/\sqrt{50}\\
+%  x_3 &= 1 + y_1/\sqrt{10} + y_3/5 - y_4/\sqrt{50}\\
+%  x_4 &= 1 + y_1/\sqrt{10} - y_3/5 - y_4/\sqrt{50}
+%  \end{aligned}
+%\end{equation}
+%
+%In these coordinates, the quintic becomes
+%
+%\begin{equation}
+%  5(\psi -1 ) =  y_1^2 + y_2^2 + y_3^2 + y_4^2 + O( \psi -1 )
+%\end{equation}
+%
+%
+%\todoin{Something about the branch}
+%
+%
+%\todoin{Volume of cycles wrapping singularities}
+%\todoin{Three-form integration}
+%
+%
+%\begin{equation}
+%  \Omega = \frac{x_5 dx_1 \wedge dx_2\wedge dx_3}{\pdv{p}{x_4}}
+%\end{equation}
+%
+%
+%\begin{equation}
+%  \int_{A^2} \Omega = \int  \dots
+%\end{equation}
