--- a/Thesis/main.tex
+++ b/Thesis/main.tex
@@ -1,4 +1,4 @@
-\documentclass[secnumarabic,10pt,nobalancelastpage,nofootinbib,a4paper]{memoir}
+\documentclass[oneside,secnumarabic,10pt,nobalancelastpage,nofootinbib,a4paper]{memoir}
 %\documentclass[aps,secnumarabic,nobalancelastpage,amsmath,amssymb,
 %nofootinbib]{revtex4}
 
@@ -65,7 +65,7 @@
 
 \usepackage{mathtools}
 \DeclarePairedDelimiter\floor{\lfloor}{\rfloor}
-
+\interfootnotelinepenalty=10000
 \begin{document}
 
 %\listoftodos
@@ -80,7 +80,7 @@
 
 \renewcommand{\baselinestretch}{1.50}\normalsize
 
-%\include{0-Abstract}
+\include{0-Abstract}
 
 \include{1-Introduction}
 
@@ -88,7 +88,7 @@
 
 \include{3-Project}
 
-%\include{4-Conclusion}
+\include{4-Conclusion}
 
 \bibliographystyle{babunsrt}
 \bibliography{mybib}
