modified:   2-Developement.tex 	modified:   3-Project.tex 	modified:   main.pdf 	modified:   main.tex

--- a/Thesis/2-Developement.tex
+++ b/Thesis/2-Developement.tex
@@ -160,36 +160,6 @@ It is useful to define with the aid of the metric the form $k=g_{i\bar j} dz^i \
 A manifold is Kähler if $dk=0$ and $k$ is then called the Kähler form.
 It can be shown that the holonomy group being contained in $U(N)$ implies that the manifold is Kähler.
 
-%The only  $U(3)$ invariants in the $\mathbf{6}$ representation of $SO(6)$ are the identity and
-%$\bar I$.
-%
-%We can also form a tensor field on $K$ of the type $J^i_j(y)=g^{ik}(y) \bar\eta \Lambda_{kj} \eta(y)$.
-%For each point $y$, we can consider $J^i_j$ as a matrix that acts on the tangent space, so $v^i \to J^i_j v^j$.
-%In this sense, $J^i_j$ is a real, traceless and $SU(3)$ invariant matrix, which means that it must be proportional
-%to $\bar I$.
-%We had already seen that $\bar I = -I$, this an example of an almost-complex structure, which is 
-%a tensor field $J$ that satisfies $J^2=-I$.
-%
-%If we employ complex coordinates, we can diagonalize $J$ so that the non-zero components are
-%$J^a_b=i\delta^a_b$ and $J^{\bar a}_{\bar b}=-i\delta^{\bar a}_{\bar b}$. This particular choice
-%is know as the canonical form.
-%
-%It is always possible to choose particular coordinates to bring $J$ to the canonical form at a particular 
-%point.
-%But in general, the canonical form will not hold at an open neighborhood of a point.
-%If a manifold admits a set of coordinates (called local holomorphic coordinates) such that at every
-%point, the canonical form holds for an open neighborhood, then the almost complex structure is integrable.
-%
-%The necessary and sufficient condition for integrability is that the Nijenhuis tensor
-%
-%\begin{equation}
-%  N^k_{ij}= J^l_i(\partial_l J^k_j - \partial_j J^k_l) - J_j^l (\partial_l J^k_i - \partial_i J^k_l)
-%\end{equation}
-%
-%vanishes.
-%An integrable almost-complex structure is a complex structure and a manifold with a complex structure
-%is a complex manifold.
-
 \subsection{Cohomology}
 
 It is useful to introduce some algebraic topology tools which we will use later on.
@@ -503,7 +473,7 @@ $R$ is a particular $\mathbb Z_2$ symmetry of the compact six-dimensional space
 In type IIA string theory we define $R=\mathcal R (-1)^{F_L}$.
 $\mathcal R$ satisfies the condition that it is an involution (squares to the identity) and 
 acts anti-holomorphically on the complex coordinates of the internal space ($\mathcal R: z_i \to \bar z_i$).
-This implies that the Kähler and the holomorphic three-form transform as $J\to -J$ and $\Omega_3 \to \bar \Omega_3$.
+This implies that the Kähler and the holomorphic three-form transform as $k\to -k$ and $\Omega_3 \to \bar \Omega_3$.
 $F_L$ is an operator that counts the number of left-moving fermions.
 
 The fixed points under $\mathcal R$ define the orientifold planes in the model and are denoted
