--- a/Thesis/main.tex
+++ b/Thesis/main.tex
@@ -80,15 +80,15 @@
 
 \renewcommand{\baselinestretch}{1.50}\normalsize
 
-\include{0-Abstract}
+%\include{0-Abstract}
 
-\include{1-Introduction}
+%\include{1-Introduction}
 
-\include{2-Developement}
+%\include{2-Developement}
 
 \include{3-Project}
 
-\include{4-Conclusion}
+%\include{4-Conclusion}
 
 \bibliographystyle{babunsrt}
 \bibliography{mybib}
