--- a/Thesis/3-Project.tex
+++ b/Thesis/3-Project.tex
@@ -20,11 +20,10 @@ and establishing the equivalence relation $( z_0,\ldots, z_{n})\sim(\lambda z_0,
 To emphasize that $z_i$ are homogeneous coordinates, they are sometimes denoted as $\qty[z_0:\ldots:z_{n}]$.
 The local (non-homogeneous) coordinates $\xi^i$ of a $j$-patch where $z_j\neq0$ are obtained by choosing $\lambda=1/z_j$ so
 \begin{equation}
-  (\xi^1_j,\ldots,\xi^n_j)=(\frac{z_0}{z_j},\ldots,\frac{z_{j-1}}{z_j},\frac{z_{j+1}}{z_j},\ldots,\frac{z_{n}}{z_j}).
+  (\xi^1_j,\ldots,\xi^n_j)=\qty(\frac{z_0}{z_j},\ldots,\frac{z_{j-1}}{z_j},\frac{z_{j+1}}{z_j},\ldots,\frac{z_{n}}{z_j}).
 \end{equation}
-It can be shown that $\mathbb{CP}^n$ is a Kähler manifold.
-$PGL$
-\todoin{Projective group see how it acts, coordinates}
+%It can also be shown that $\mathbb{CP}^n$ is a Kähler manifold.
+%$PGL$
 
 The complex projective space allows us to obtain lower dimensional manifolds as subspaces of $\mathbb{CP}^n$.
 Indeed, Chow's theorem states that any submanifold of complex dimension $n-r$ of $\mathbb{CP}^n$ can be realized as the zero locus of $r$-homogeneous polynomial equations.
@@ -40,39 +39,48 @@ The number of independent monomials of degree $d$ in $n+1$ variables is given by
 \end{equation}
 But not all of these lead to different manifolds, since some of them can be related through coordinate transformations, 
 which belong to complex general linear group $GL(\mathbb C)_{n+1}$.
-Thus, the number of the number of possible submanifolds is given by
+Thus, the number of possible submanifolds is given by
 \begin{equation}
   \# \text{ submanifolds } \mathbb{CP}^n = \# \text{ indep. monomials}-\# \text{ components }GL(\mathbb C)_{n+1}
 \end{equation}
 Among of the ${{9}\choose{4}}-5^5=101$ possible submanifolds of $\mathbb{CP}^4$ defined by a quintic polynomial, lies
 Fermat's quintic threefold defined by the polynomial $P_5$ as
-%Two relevant submanifolds are Fermat's quartic twofold in $\mathbb{CP}^3$ and Fermat's
 \begin{equation}
   %P_4(z)& = z_0^5+z_1^5+z_2^5+z_3^5=0\\
   P_5(z)& = z_0^5+z_1^5+z_2^5+z_3^5+z_4^5=0.
 \end{equation}
 
 \subsection{Construction of SLags}
-A special-Lagrangian three-cycle is constructed introducing an anti-holomorphic involution.
-In the case of $\mathbb{CP}^4$, there is only one consistent anti-holomorphic,
-that acts on the homogeneous coordinates as $\mathcal R: z_i \to\bar z_i$.
-SLags three-cycles are then defined as the fixed loci under $\mathcal R$, which in the case of
-Fermat's quintic leads to the following SLag
+A special-Lagrangian three-cycle is constructed by introducing an anti-holomorphic involution.
+In the case of $\mathbb{CP}^4$, there is only one consistent anti-holomorphic involution,
+which acts on the homogeneous coordinates as $\mathcal R: z_i \to\bar z_i$.
+A particular instance of SLag three-cycle is defined as the fixed loci under $\mathcal R$.
+In the case of Fermat's quintic leads it to the following SLag
 \begin{equation}
-  \qty{\qty[x_0:x_1:x_2:x_3:x_4]\in  \mathbb{RP}^4| x_0^5+x_1^5+x_2^5+x_3^5+x_4^5=0}
+  \qty{\qty[x_0:x_1:x_2:x_3:x_4]\in  \mathbb{RP}^4| x_0^5+x_1^5+x_2^5+x_3^5+x_4^5=0}.
 \end{equation}
+\todoin{This is the space where O6-planes lie. Think dim O6-planes and sLags}
 This subspace is topologically equivalent to $\mathbb{RP}^3$, which can be noticed through the
 homeomorphism from $\mathbb{RP}^3$ to the SLag:
 \begin{equation}
-(u_0,u_1,u_3) \to (u_0,u_1,u_2,u_3, -(u_0^5+u_1^5+u_2^5+u_3^5)^{1/5}
+(u_0,u_1,u_3) \to (u_0,u_1,u_2,u_3, -(u_0^5+u_1^5+u_2^5+u_3^5)^{1/5}).
 \end{equation}
 
-Show that the obtained subspace is special-Lagrangian
-$\mathcal R: k \to -k$
-calibrated with respect $\Omega_3$.
-The three-form in a local coordinate patch where $z_0\neq0$ is
+In order to prove that the obtained subspace is indeed special-Lagrangian we must
+verify that the Kähler form vanishes at the SLag and that it is calibrated with respect to the
+same three-form as $\Omega_3$.
+\todoin{Clarify}
+\begin{itemize}
+  \item The Kähler form $k$ transforms under the anti-holomorphic involution as $k\to -k$, 
+    but since the pull-back of $k$ onto the three-dimensional subspace must be real, 
+    the only possibility is $k\rvert_{\mathrm{SLag}}=0$
+
+  \item 
+The holomorphic three-form in a non-homogeneous patch where $x_0\neq0$ is
+\todoin{Justify, what do we integrate and why}
 \begin{equation}
   \Omega_3=\frac{4}{2\pi i}\int \frac{x_0 dx_1\wedge dx_2 \wedge dx_3 \wedge dx_4}{P_5(x_i)}
+  \label{eq:3form}
 \end{equation}
 if we interpret $x_4$ as a function of $P_5$ and integrate over a loop around $P_5=0$
 \begin{equation}
@@ -82,12 +90,13 @@ if we interpret $x_4$ as a function of $P_5$ and integrate over a loop around $P
 where we have defined the local coordinates $y_i=x_i/x_0$.
 By taking the norm of the previous equation, we relate $\Omega_3$ to the determinant of the 
 six-dimensional metric
+\todoin{Clarify step}
 \begin{equation}
-  ||\Omega_3||^2 = \frac{1}{\det g |y_4|^8}
+  ||\Omega_3||^2 = \frac{1}{\det g |y_4|^8}.
 \end{equation}
 Since $\Omega_3$ is covariantly constant, $||\Omega_3||$ must also be proportional to a constant defined as
 \begin{equation}
-  ||\Omega_3||^2 = 8e^{2\kappa}
+  ||\Omega_3||^2 = 8e^{2\kappa}.
 \end{equation}
 \begin{equation}
   \det g = \frac{e^{-2\kappa}}{8|y_4|^8}
@@ -96,26 +105,86 @@ The pull-back of the six-dimensional metric onto the three-cycle is
 \begin{equation}
   h_{\alpha\beta}=2\partial_\alpha X^i \partial_\beta X^{\bar j}g_{i\bar j}
 \end{equation}
+So the volume form of the SLag three-cycle coincides with $\Omega_3$
 \begin{equation}
   e^k \sqrt{\det h_{ab}}d\sigma^1\wedge d\sigma^2\wedge d\sigma^3
   =e^k |\det \partial y| \frac{e^{-\kappa}}{|y_4|^4}d\sigma^1\wedge d\sigma^2\wedge d\sigma^3=\Omega_3
 \end{equation}
+\todoin{Ask reasoning}
+\end{itemize}
 
 It is possible to define different SLags by exploiting the $\mathbb Z_5^4$ symmetry of the quintic,
-which are rotations  
+which leads to a whole family of SLags
 \begin{equation}
   \ket{0,k_1,k_2,k_3,k_4} = {\qty[x_0:\omega^k_1 x_1:\omega^k_2 x_2:\omega^k_3 x_3:\omega^k_4 x_4]}
 \end{equation}
-where $\omega=e^{i\frac{2\pi}{5}}$
-calibrated O6-plane $\ket{0,0,0,0,0}$.
-The choice of $k_i$ leads to $5^4=625$ SLag three-cycles, but not all of them are calibrated
-\todo{This now!}
+where $\omega=e^{i\frac{2\pi}{5}}$. 
+The freedom to choose of $k_i\in \mathbb Z_5$ leads to $5^4=625$ SLag three-cycles, but not all of them are calibrated
+with respect to the same three-form as O$6$-plane $\ket{0,0,0,0,0}$.
+$\sum_{i} k_i^4=0 \text{ mod 5}$
+so only $125$ SLags are calibrated with respect to the same three-form as the O$6$-plane.
 
 \subsection{Moduli space of SLags}
-\todoin{Hard}
+
+\todoin{Not sure if the reasoning in this section is too sloppy.}
+We are not only interested in SLags themselves, but also in their moduli space.
+The reason is that deformations of SLag three-cycles codify the information of the open string 
+excitations of the D$6$-branes that wrap around them.
+In particular, they determine de vev of the scalar field excitations and thus the position of the D6-branes
+and whether they are stable configurations or not.
+
+A deformation of a reference SLag three-cycle $\Pi_3$ into another three-cycle (in the same homology class as the original SLag)  can be parameterized by a normal vector field, which belongs to the normal bundle of $\Pi_3$.  
+This deformation normal vector field can be written in a basis $\qty{s^i}_i$ as
+\begin{equation}
+  X=\phi_i s^i
+\end{equation}
+where $\phi_i$ correspond to the scalar fields defined on the D6-brane worldvolume theory.
+The Kähler form introduces an isomorphism between the normal bundle of $\Pi_3$ and the cotangent bundle of $\Pi_3$.
+According to McLean's theorem, harmonic one-forms are associated to a deformation vector field.
+Recalling that there is a single harmonic form in each cohomology class, we associate to every $s^i$ a one-form $\xi_i\in H^1(\Pi)$.
+As a consequence, the moduli space of SLags is identified with $H^1(\Pi_3)$.
+
+A gauge potential $A$ on the D$6$-brane can be expanded in a basis of one-forms $\xi_i$ as $A=a^i \xi_i$.
+In order to fill in the multiplets of the spectrum arising from open string excitation of D6-branes,
+we must arrange the $a^i$ and $\phi_i$ into a complex scalar field
+\begin{equation}
+ \Phi^i = \phi_i + ia^i. 
+\end{equation}
+
+We can now apply the previous reasoning to SLag three-cycles defined on Fermat's quintic.
+Since $H^1(\mathbb{RP}^3)\simeq H_1(\mathbb{RP}^3)\simeq\mathbb Z_2$, there are no continuous deformations of the
+SLags and they are guaranteed to remain stable.
 
 \subsection{Intersection numbers}
-spectrum of intersecting D6-branes
+We now study the intersection numbers between different SLags, which are used to determine the number 
+of chiral fermions associated to the intersecting D6-branes.
+
+First of all, we choose a coordinate patch of $\mathbb{CP}^4$ where $x_0=1$ and take one of the SLags to be $\ket{0,0,0,0,0}$
+and the other SLag $\ket{0,k_1,k_2,k_3,k_4}=\omega^{k_1}\omega^{k_2}\omega^{k_3}\omega^{k_4}\ket{0,0,0,0,0}$, obtained by applying successive rotations $\omega$ associated to the $\mathbb Z_5^4$ symmetry.
+The intersection numbers in this patch are:
+\begin{itemize}
+  \item If $\omega_i^{k_i}\neq 1$ for all $i$, there are no intersections in this patch. 
+    The justification is that the coordinates of one of the SLags $\qty[1:x_1:x_2:x_3:x_4]$ where $x_i\in\mathbb R$ take only real values,
+    while some of the coordinates of the SLag $[1:\omega_1^{k_1}x_1:\omega_2^{k_2}x_2:\omega_3^{k_3}x_3:\omega_4^{k_4}x_4]$ take
+    always complex numbers.
+
+  \item If $\omega_i^{k_i}\neq 1$ for only one $i$, which we set to be $i=4$, the intersection
+    is at a single point.
+    In particular, the intersection of $\qty[1:x_1:x_2:x_3:x_4]$ with $[1:\omega_1^{k_1}x_1:\omega_2^{k_2}x_2:\omega_3^{k_3}x_3:\omega_4^{k_4}x_4]$
+    is located at $(1,0,0,0,x_4)$.% in terms of the coordinates $\mathbb{CP}^4$. 
+    When we restrict this line in $\mathbb{CP}^4$ to the quintic hypersurface, the intersection reduces to the point $(1,0,0,0,-1)$.
+    The signature of the intersection is $\mathrm{sgn}(\Im \omega^{k_1}\Im\omega^{k_2}\Im\omega^{k_3})$. 
+
+  \item If $\omega_i^{k_i}\neq 1$ for at least two different values of $k_i$, we have to deform one of the SLags.
+    \begin{itemize}
+  \item
+    $I_{\mathbb{RP}^3}=0$
+  \item 
+    $I_{\mathbb{RP}^2}=1$
+  \item 
+    $I_{\mathbb{RP}^3}=0$
+    \end{itemize}
+\end{itemize}
 
 \subsection{Volumes}
 \begin{equation}
@@ -129,125 +198,125 @@ spectrum of intersecting D6-branes
 
 \subsection{SM on the quintic}
 
-\section{SLags on the deformed quintic}
-
-\subsection{Deformations of the quintic}
-
-A generalization of Fermat's quintic consists in considering hypersurfaces defined by a generic polynomial of degree five
-\begin{equation}
-  P_5(z)=\sum_{n_0+n_1+n_2+n_3+n_4=5} a_{n_0 n_1 n_2 n_3 n_4} z_0^{n_0}z_1^{n_1}z_2^{n_2}z_3^{n_3}z_4^{n_4}=0
-\end{equation}
-This construction reduces to Fermat's quintic when $a_{50000}=a_{50000}=a_{50000}=a_{50000}=a_{50000}=1$ and all other coefficients are zero.
-A well-know example is
-\begin{equation}
-  z_0^5+z_1^5+z_2^5+z_3^5+z_4^5- 5\psi z_0z_1z_2z_3z_4=0
-\end{equation}
- where the parameter $\psi$ can take three values of particular relevance
-\begin{itemize}
-  \item $\psi=1$: the Fermat (or Gepner point).
-  \item $\psi=0$: the conifold point.
-  \item $\psi=\infty$: the large complex structure limit.
-\end{itemize}
-
-We can deform Fermat's quintic by adding a monomial to the defining polynomial.
-The possible monomials are of the type:
-\begin{enumerate}
-  \item $z_0z_1z_2z_3z_4$, $1$ deformation.
-  \item $z_i z_j z_k(z_l)^2$, ${5}\choose{3}$${2}\choose{1}$$=20$ deformations. 
-  \item $z_i(z_j)^k(z_l)^2$, ${5}\choose{1}$${4}\choose{2}$$=30$ deformations.
-  \item $z_i z_j(z_k)^3$, ${5}\choose{2}$${3}\choose{1}$$=30$ deformations.
-  \item $(z_i)^2(z_j)^3$, ${5}\choose{1}$${4}\choose{1}$$=20$ deformations.
-  \item $z_i(z_j)^4$, ${5}\choose{3}$${2}\choose{1}$$=20$ deformations.
-\end{enumerate}
-In total there are $126$ deformations, but they are not all independent, since they 
-can be related through coordinate transformations.
-Subtracting  $25$ we $101$ deformation parameters.
-This is precisely the Hodge number $h_{2,1}=101$, since the defining homogeneous polynomial  
-represents a particular choice of the complex structure, which is given by 
-harmonic $(2,1)$-form in $H^{2,1}(X,\mathbb C)$.
-The deformations of Kähler structure is given by the $h^{1,1}$ and is precisely one.
-
-Fermat's quintic enjoys the $\mathbb Z_5^4$ symmetry acting on the homogeneous coordinates 
-\begin{equation}
-  z_i \to \omega^k_i z_i, \qquad \omega_i=e^{i\frac{2\pi}{5}}
-\end{equation}
-which can be broken into a smaller subgroup when turning on deformations.
-We should also examine whether deformations introduce any singularities, which
-are defined as the points 
-\begin{equation}
-  P_5(X)=0, \qquad dP_5=0
-\end{equation}
-The nature of the singularity is obtained by evaluating the Hessian at the singularity.
-That is calculating $d^2 P_5$ in a local coordinate patch, where one of the homogeneous coordinate is non-zero.
-\todoin{Complete}
-
-We proceed to examine the singularities and associated symmetry subgroups of the deformations.
-\begin{enumerate}
-  \item No deformations.
-
-    $z_0^5+z_1^5+z_2^5+z_3^5+z_4^5=0$ The only point where $dP_5=0$ is  $(0,0,0,0,0)$, which 
-    is not part of $\mathbb{CP}^4$, so 
-
-  \item $5\psi z_0z_1z_2z_3z_4$
-
-    $z_0^5+z_1^5+z_2^5+z_3^5+z_4^5- 5\psi z_0z_1z_2z_3z_4=0$
-
-    The singularities are located at:
-    \begin{equation}
-      z_i^5=\psi x_0x_1x_2x_3x_4
-    \end{equation}
-    \begin{equation}
-      \Pi z_i^5=\psi^5 ( x_0x_1x_2x_3x_4 )^5
-    \end{equation}
-    so in order to obtain a singular point, $\psi^5=1$.
-    Taking $\psi=1$, there a single singular point $(1,1,1,1,1)$ which is a node, since the Hessian doesn't vanish.
-    Locally, the node can be recast into a conifold singularity.
-
-  \item $5\psi z_0z_1z_2(z_3)^2$
-
-    $z_0^5+z_1^5+z_2^5+z_3^5+z_4^5- 5\psi z_0z_1z_2(z_3)^2=0$
-
-    Singularities in the coordinate patch where $z_3=1$
-    \begin{equation}
-      (\frac{1}{\sqrt[5]{2}}, \frac{1}{\sqrt[5]{2}}, \frac{1}{\sqrt[5]{2}}, 1,0) 
-    \end{equation}
-    $\psi=\frac{1}{\sqrt[5]{2}}$
-
-  \item $5\psi z_0(z_1)^2(z_2)^2$
-
-    $z_0^5+z_1^5+z_2^5+z_3^5+z_4^5- 5\psi z_0z_1z_2(z_3)^2=0$
-
-    \begin{equation}
-      (1, \sqrt[5]{2}, \sqrt[5]{2}, 0, 0)
-    \end{equation}
-    $\psi=\frac{1}{\sqrt[5]{2^4}}$
-
-  \item $5\psi z_0z_1(z_2)^3$
-
-    \begin{equation}
-      (\sqrt[5]{3}, \sqrt[5]{3},1, 0, 0)
-    \end{equation}
-    $\psi=\frac{1}{\sqrt[5]{3^3}}$
-
-  \item $5\psi (z_0)^2(z_1)^3$
-
-    \begin{equation}
-      (1, \sqrt[5]{\frac{3}{2}}, 0, 0, 0)
-    \end{equation}
-    $\psi=\frac{1}{\sqrt[5]{3^3}}$
-
-  \item $5\psi z_0(z_1)^4$
-
-    \begin{equation}
-      (1, \sqrt[5]{4}, 0, 0, 0)
-    \end{equation}
-    $\psi=\frac{1}{\sqrt[5]{4^4}}$
-
-    \todoin{Check values, add words}
-\end{enumerate}
-
-\subsection{SLags on the deformed quintic}
-\todoin{Generalities. Special case. Generalization}
+%\section{SLags on the deformed quintic}
+%
+%\subsection{Deformations of the quintic}
+%
+%A generalization of Fermat's quintic consists in considering hypersurfaces defined by a generic polynomial of degree five
+%\begin{equation}
+%  P_5(z)=\sum_{n_0+n_1+n_2+n_3+n_4=5} a_{n_0 n_1 n_2 n_3 n_4} z_0^{n_0}z_1^{n_1}z_2^{n_2}z_3^{n_3}z_4^{n_4}=0
+%\end{equation}
+%This construction reduces to Fermat's quintic when $a_{50000}=a_{50000}=a_{50000}=a_{50000}=a_{50000}=1$ and all other coefficients are zero.
+%A well-know example is
+%\begin{equation}
+%  z_0^5+z_1^5+z_2^5+z_3^5+z_4^5- 5\psi z_0z_1z_2z_3z_4=0
+%\end{equation}
+% where the parameter $\psi$ can take three values of particular relevance
+%\begin{itemize}
+%  \item $\psi=1$: the Fermat (or Gepner point).
+%  \item $\psi=0$: the conifold point.
+%  \item $\psi=\infty$: the large complex structure limit.
+%\end{itemize}
+%
+%We can deform Fermat's quintic by adding a monomial to the defining polynomial.
+%The possible monomials are of the type:
+%\begin{enumerate}
+%  \item $z_0z_1z_2z_3z_4$, $1$ deformation.
+%  \item $z_i z_j z_k(z_l)^2$, ${5}\choose{3}$${2}\choose{1}$$=20$ deformations. 
+%  \item $z_i(z_j)^k(z_l)^2$, ${5}\choose{1}$${4}\choose{2}$$=30$ deformations.
+%  \item $z_i z_j(z_k)^3$, ${5}\choose{2}$${3}\choose{1}$$=30$ deformations.
+%  \item $(z_i)^2(z_j)^3$, ${5}\choose{1}$${4}\choose{1}$$=20$ deformations.
+%  \item $z_i(z_j)^4$, ${5}\choose{3}$${2}\choose{1}$$=20$ deformations.
+%\end{enumerate}
+%In total there are $126$ deformations, but they are not all independent, since they 
+%can be related through coordinate transformations.
+%Subtracting  $25$ we $101$ deformation parameters.
+%This is precisely the Hodge number $h_{2,1}=101$, since the defining homogeneous polynomial  
+%represents a particular choice of the complex structure, which is given by 
+%harmonic $(2,1)$-form in $H^{2,1}(X,\mathbb C)$.
+%The deformations of Kähler structure is given by the $h^{1,1}$ and is precisely one.
+%
+%Fermat's quintic enjoys the $\mathbb Z_5^4$ symmetry acting on the homogeneous coordinates 
+%\begin{equation}
+%  z_i \to \omega^k_i z_i, \qquad \omega_i=e^{i\frac{2\pi}{5}}
+%\end{equation}
+%which can be broken into a smaller subgroup when turning on deformations.
+%We should also examine whether deformations introduce any singularities, which
+%are defined as the points 
+%\begin{equation}
+%  P_5(X)=0, \qquad dP_5=0
+%\end{equation}
+%The nature of the singularity is obtained by evaluating the Hessian at the singularity.
+%That is calculating $d^2 P_5$ in a local coordinate patch, where one of the homogeneous coordinate is non-zero.
+%\todoin{Complete}
+%
+%We proceed to examine the singularities and associated symmetry subgroups of the deformations.
+%\begin{enumerate}
+%  \item No deformations.
+%
+%    $z_0^5+z_1^5+z_2^5+z_3^5+z_4^5=0$ The only point where $dP_5=0$ is  $(0,0,0,0,0)$, which 
+%    is not part of $\mathbb{CP}^4$, so 
+%
+%  \item $5\psi z_0z_1z_2z_3z_4$
+%
+%    $z_0^5+z_1^5+z_2^5+z_3^5+z_4^5- 5\psi z_0z_1z_2z_3z_4=0$
+%
+%    The singularities are located at:
+%    \begin{equation}
+%      z_i^5=\psi x_0x_1x_2x_3x_4
+%    \end{equation}
+%    \begin{equation}
+%      \Pi z_i^5=\psi^5 ( x_0x_1x_2x_3x_4 )^5
+%    \end{equation}
+%    so in order to obtain a singular point, $\psi^5=1$.
+%    Taking $\psi=1$, there a single singular point $(1,1,1,1,1)$ which is a node, since the Hessian doesn't vanish.
+%    Locally, the node can be recast into a conifold singularity.
+%
+%  \item $5\psi z_0z_1z_2(z_3)^2$
+%
+%    $z_0^5+z_1^5+z_2^5+z_3^5+z_4^5- 5\psi z_0z_1z_2(z_3)^2=0$
+%
+%    Singularities in the coordinate patch where $z_3=1$
+%    \begin{equation}
+%      (\frac{1}{\sqrt[5]{2}}, \frac{1}{\sqrt[5]{2}}, \frac{1}{\sqrt[5]{2}}, 1,0) 
+%    \end{equation}
+%    $\psi=\frac{1}{\sqrt[5]{2}}$
+%
+%  \item $5\psi z_0(z_1)^2(z_2)^2$
+%
+%    $z_0^5+z_1^5+z_2^5+z_3^5+z_4^5- 5\psi z_0z_1z_2(z_3)^2=0$
+%
+%    \begin{equation}
+%      (1, \sqrt[5]{2}, \sqrt[5]{2}, 0, 0)
+%    \end{equation}
+%    $\psi=\frac{1}{\sqrt[5]{2^4}}$
+%
+%  \item $5\psi z_0z_1(z_2)^3$
+%
+%    \begin{equation}
+%      (\sqrt[5]{3}, \sqrt[5]{3},1, 0, 0)
+%    \end{equation}
+%    $\psi=\frac{1}{\sqrt[5]{3^3}}$
+%
+%  \item $5\psi (z_0)^2(z_1)^3$
+%
+%    \begin{equation}
+%      (1, \sqrt[5]{\frac{3}{2}}, 0, 0, 0)
+%    \end{equation}
+%    $\psi=\frac{1}{\sqrt[5]{3^3}}$
+%
+%  \item $5\psi z_0(z_1)^4$
+%
+%    \begin{equation}
+%      (1, \sqrt[5]{4}, 0, 0, 0)
+%    \end{equation}
+%    $\psi=\frac{1}{\sqrt[5]{4^4}}$
+%
+%    \todoin{Check values, add words}
+%\end{enumerate}
+%
+%\subsection{SLags on the deformed quintic}
+%\todoin{Generalities. Special case. Generalization}
 
 
 %The consider the possible deformations of Fermat's quintic.
